--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "http-errors": "~1.6.3",
     "mongoose": "^5.6.1",
     "morgan": "~1.9.1",
-    "passport": "^0.4.0"
+    "passport": "^0.4.0",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "dotenv": "^8.0.0"
