--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
-    "favicon": "0.0.2",
+    "express-session": "^1.16.2",
     "http-errors": "~1.6.3",
-    "mongoose": "^5.6.1",
+    "mongoose": "^5.6.3",
     "morgan": "~1.9.1",
     "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
